[gd_scene load_steps=10 format=3 uid="uid://boorg276smp0p"]

[ext_resource type="Script" uid="uid://c2hbgmu1v4r06" path="res://MainMenu.gd" id="1_cqjrg"]
[ext_resource type="Texture2D" uid="uid://3rfmp5ib6abs" path="res://Assets/MainMenuBG.png" id="1_iwfq2"]
[ext_resource type="Texture2D" uid="uid://dassv30jnqpvh" path="res://Assets/Lights On.png" id="2_7r1g0"]
[ext_resource type="Texture2D" uid="uid://q1uei2ynscwm" path="res://Assets/YellowButton.png" id="3_cqjrg"]
[ext_resource type="Texture2D" uid="uid://br4dwgk3lkh5x" path="res://Assets/YellowPushButton.png" id="4_e2xy7"]
[ext_resource type="Texture2D" uid="uid://qccq8ojavw3u" path="res://Assets/Lights Off.png" id="4_fimr5"]
[ext_resource type="FontFile" uid="uid://bgn3lygaimqlr" path="res://Assets/Jersey10-Regular.ttf" id="5_fimr5"]
[ext_resource type="Texture2D" uid="uid://dwo40h5gu7m03" path="res://Assets/QuitBtn.png" id="6_7r1g0"]

[sub_resource type="LabelSettings" id="LabelSettings_u7cqb"]
font_size = 28
font_color = Color(0.158472, 0.158472, 0.158472, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cqjrg")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 400.0
offset_bottom = 601.0
texture = ExtResource("1_iwfq2")
expand_mode = 1

[node name="BtnLights" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 76.0
offset_top = 224.0
offset_right = 145.0
offset_bottom = 338.0
texture_normal = ExtResource("2_7r1g0")
texture_pressed = ExtResource("4_fimr5")
ignore_texture_size = true
stretch_mode = 0

[node name="BtnSimon" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 245.0
offset_top = 244.0
offset_right = 339.0
offset_bottom = 340.0
texture_normal = ExtResource("3_cqjrg")
texture_pressed = ExtResource("4_e2xy7")
ignore_texture_size = true
stretch_mode = 4

[node name="LightsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 59.0
offset_top = 337.0
offset_right = 160.0
offset_bottom = 370.0
theme_override_fonts/font = ExtResource("5_fimr5")
text = "Lights On"
label_settings = SubResource("LabelSettings_u7cqb")
horizontal_alignment = 1

[node name="LightsLabel2" type="Label" parent="."]
offset_left = 240.0
offset_top = 337.0
offset_right = 341.0
offset_bottom = 370.0
theme_override_fonts/font = ExtResource("5_fimr5")
text = "Simon Says"
label_settings = SubResource("LabelSettings_u7cqb")
horizontal_alignment = 1

[node name="BtnQuit" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 154.0
offset_top = 443.0
offset_right = 240.0
offset_bottom = 538.0
texture_normal = ExtResource("6_7r1g0")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="BtnLights" to="." method="_on_btn_lights_pressed"]
[connection signal="pressed" from="BtnSimon" to="." method="_on_btn_simon_pressed"]
[connection signal="pressed" from="BtnQuit" to="." method="_on_btn_quit_pressed"]
